# sqlcpp

./: .gitignore  CMakeLists.txt  ODBC_README.md  README.md  TODO
cmake/: SqlcppConfig.cmake.in
debian/: changelog  control  libsqlcpp-dev.cmake-components  libsqlcpp-mariadb-dev.cmake-components  libsqlcpp-postgresql-dev.cmake-components  libsqlcpp-sqlite-dev.cmake-components  libsqlcpp.cmake-components
examples/simple/: CMakeLists.txt  simple-example.cpp
include/: sqlcpp.hpp
include/sqlcpp/: details.hpp  mariadb.hpp  odbc.hpp  postgresql.hpp  sqlcpp.hpp  sqlite.hpp
src/: CMakeLists.txt  mariadb.cpp  odbc.cpp  postgresql.cpp  sqlcpp.cpp  sqlcpp_config.hpp.in  sqlite.cpp
tests/: CMakeLists.txt  catch.hpp  factory_local.cpp  runner.cpp  tests-mariadb.cpp  tests-odbc.cpp  tests-postgresql.cpp  tests-sqlite.cpp
